exports[`2000ms enterDuration`] = `
<div
  data-css-33m34m="*"
  style={undefined}>
  <div
    data-css-1sbtqe0="*"
    data-css-jds5j9="*"
    style={undefined} />
  <div
    data-css-1sbtqe0="*"
    data-css-jds5j9="*"
    style={undefined} />
  <div
    data-css-1sbtqe0="*"
    data-css-jds5j9="*"
    style={undefined} />
</div>
`;

exports[`enter with green, leave with red`] = `
<div
  data-css-33m34m="*"
  style={undefined}>
  <div
    data-css-1sbtqe0="*"
    data-css-jds5j9="*"
    style={undefined} />
  <div
    data-css-1sbtqe0="*"
    data-css-jds5j9="*"
    style={undefined} />
  <div
    data-css-1sbtqe0="*"
    data-css-jds5j9="*"
    style={undefined} />
</div>
`;

exports[`passes props to parent View`] = `
<div
  data-css-epbrye="*"
  style={undefined}>
  <div
    data-css-ab0pxa="*"
    style={undefined} />
  <div
    data-css-ab0pxa="*"
    style={undefined} />
  <div
    data-css-ab0pxa="*"
    style={undefined} />
</div>
`;

exports[`renders children`] = `
<div
  data-css-33m34m="*"
  style={undefined}>
  <div
    data-css-ab0pxa="*"
    style={undefined} />
  <div
    data-css-ab0pxa="*"
    style={undefined} />
  <div
    data-css-ab0pxa="*"
    style={undefined} />
</div>
`;
